fix navredesign colors and "collapse menu" button

--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -893,6 +893,7 @@ $font-size: rem(14px);
 
 		.sidebar__menu-icon {
 			margin-top: 1px;
+			color: var(--color-collapse-menu-text);
 		}
 	}
 
